--- a/javaserver/.classpath
+++ b/javaserver/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/netty-all-4.0.33.Final.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
